--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <h1>Bouncing Balls</h1>
 
     <!-- Ändringar i index -->
+    <!-- 3 -->
     <button id="pause" onclick="pause()">Pause</button>
     <button class="invisible" id="start" onclick="start()">Start</button>
 
+    <!-- 4 -->
+    <input type="number" id="amountOfBalls">
+    <button class="add" id="implement" onclick="changeAmountOfBalls()">Implement</button>
 
     
     <canvas></canvas>
@@ -21,5 +25,8 @@
   </body>
 </html>
 
-<!-- Det är en 10% chans att en boll blir extra stor (66.js) -->
-<!-- Har gjort så att om en boll har hastigheten -1,0,1 så ändras den till -10 eller 10 (77.js) -->
+<!-- 1.Det är en 10% chans att en boll blir extra stor. (66.js) -->
+<!-- 2.Har gjort så att om en boll har hastigheten -1,0,1 så ändras den till -10 eller 10. (77.js) -->
+<!-- 3.Gjorde en start och pause funktion. (130.js) -->
+<!-- 4.Gör så att man kan välja hur många bollar det ska finnas, men det börjar på 15 vid sid öppning. (56.js)
+      Var också tvungen att göra en funktion runt while loopen och tillkalla den. (64-113.js) -->
